userChrome.css
@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");

/* THEME */
  :root {
    --lwt-accent-color: rgb(227, 228, 230) !important;
    --toolbar-bgcolor: rgb(245, 246, 247) !important;
    --lwt-background-tab-separator-color: var(--urlbar-separator-color)
  }
  :root[lwtheme="true"][lwthemetextcolor="bright"] {
    --lwt-accent-color: rgb(35, 35, 35) !important;
    --lwt-toolbar-field-background-color: rgb(35, 35, 35) !important;
    --autocomplete-popup-background: rgb(62, 62, 62) !important;
    --arrowpanel-background: rgb(62, 62, 62) !important;
    --toolbar-bgcolor: rgb(76, 76, 76) !important;
    --tab-line-color: rgb(76, 76, 76) !important;
    --lwt-text-color: rgba(146, 146, 146) !important;
    --arrowpanel-color: rgba(224, 224, 224, 1) !important;
    --lwt-toolbar-field-color: rgba(224, 224, 224, 1) !important;
    --autocomplete-popup-color: rgb(224, 224, 224) !important;
    --toolbar-color: rgb(224, 224, 224) !important;
    --panel-disabled-color: rgba(224, 224, 224, 0.5) !important;
  }

  :root[lwtheme="true"][lwthemetextcolor="bright"] #urlbar, .searchbar-textbox {
    border-color: var(--lwt-accent-color) !important;
  }

  #TabsToolbar-customization-target {
    background-color: var(--lwt-accent-color);
  }

  .tab-line {
    display: none;
  }

  #urlbar, .searchbar-textbox {
    box-shadow: none !important;
  }

  #PanelUI-button {
    border-left: none !important;
  }

  .tabbrowser-tab:not([selected="true"])::after,
  .tabbrowser-tab:not([selected="true"])::before {
    /* opacity: 0.1 !important; */
  }
  .tabbrowser-tab::after,
  .tabbrowser-tab::before {
    border-color: #000 !important;
  }

  #tabbrowser-tabs {
    --tab-line-color: var(--tab-line-color) !important;
    background-color: var(--arrowpanel-dimmed);
  }

  .tab-close-button {
    stroke-opacity: .5 !important;
    scale: .9;
  }

  #tabs-newtab-button {
    padding-left: 2.5px;
  }

  /* Darkern top window border highlight */
  #nav-bar:not([inFullscreen="true"]) {
    border-top: 1px solid black;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
  }
  #nav-bar:not([inFullscreen="true"]) #nav-bar-customization-target {
    margin-top: -1px;
  }
/* THEME END */


/* BACK BUTTON */
  #back-button {
    border-radius: unset !important;
    padding: 0 var(--toolbarbutton-outer-padding) !important;
  }

  #back-button > .toolbarbutton-icon {
    background-color: unset !important;
    border: unset !important;
    padding: var(--toolbarbutton-inner-padding) !important;
    border-radius: var(--toolbarbutton-border-radius) !important;
    width: calc(2 * var(--toolbarbutton-inner-padding) + 16px) !important;
    height: calc(2 * var(--toolbarbutton-inner-padding) + 16px) !important;
  }

  /* Hover and Active states to mimic other buttons */
  #back-button:hover:not([disabled]) > .toolbarbutton-icon {
    background-color: var(--toolbarbutton-hover-background) !important;
  }

  #back-button:active:not([disabled]) > .toolbarbutton-icon {
    background-color: var(--toolbarbutton-active-background) !important;
  }
/* BACK BUTTON END*/


/* TABS ON BOTTOM — Firefox 71+ */
  /* tabbar to bottom */
  #titlebar {
    display: block !important;
    position: absolute !important;
    margin-top: calc(100vh - var(--tab-min-height));
    z-index: 9000 !important;
  }

  /* window control buttons to top */
  .titlebar-buttonbox-container {
    top: calc(-100vh + var(--tab-min-height) + 2px);
    position: absolute !important;
    display: block !important;
    margin-top: calc( var(--arrowpanel-padding) / 2 ) !important;
  }
  #nav-bar:not([inFullscreen="true"]) #nav-bar-customization-target {
    margin-left: 80px !important;
  }

  #nav-bar:not([inFullscreen="true"]) {
    margin-bottom: -0.5px;
  }

  #browser {
    margin-bottom: calc(var(--tab-min-height) + 0.5px);
  }

  .titlebar-spacer {display: none !important;}
  #toolbar-menubar {display: none !important;}

  #TabsToolbar {
    width: 100vw;
  }

  ::root:not([inDOMFullscreen="true"]) #browser {
    margin-bottom: var(--tab-min-height) !important;
  }

  /* indicators */
  .private-browsing-indicator {display: none !important;}
  .accessibility-indicator    {display: none !important;}

  /* remove tabs scroll arrows NOT WORKING */
  .tabbrowser-arrowscrollbox /deep/ toolbarbutton {
    display: none !important;
  }

  /* remove tabs list dropdown button */
  #alltabs-button {display: none !important;}
/* TABS ON BOTTOM END */


/* Tabs close button: hidden by default */
  .tab-close-button {
    opacity: 0;
  }

  .tabbrowser-tab[selected="true"] .tab-close-button,
  .tabbrowser-tab:hover .tab-close-button {
    opacity: 1;
  }

/* END Tabs close button: hidden by default */


/* Compact findbar at the top of the window — Contributor(s): Madis0 */
  .browserContainer > findbar {
    display: inline-block;
    -moz-box-ordinal-group: 0;
    position: fixed !important;
    right: 1em;
    border-bottom-right-radius: var(--toolbarbutton-border-radius);
    border-bottom-left-radius: var(--toolbarbutton-border-radius);
    padding-inline-start: 8px;
    background: var(--arrowpanel-background) !important;
    box-shadow: 0 2px 10px -4px var(--arrowpanel-background);

    /* Hide the "border" at the top by removing background-image */
    border-top: none !important;
    background-image: none !important;

    /* Uncomment to add a transition from the top */
    transition: var(--toolbarbutton-hover-transition-duration) !important;
    z-index: 0 !important;

  }

  /* Margin from top when hidden (necessary for the transition to work) */
  findbar[hidden]{ margin-top: -4px !important; }

  /* Aligns the close button to the center */
  .findbar-closebutton {
    margin-inline-start: 0.5em !important;
    vertical-align: middle !important;
    margin-bottom: 0.25em !important;
    height: inherit !important;
  }
/* Compact findbar END */


/* KEYMASTERR */
  #pageActionButton,
  #page-action-buttons #pageActionSeparator
  { display: none; }

  #nav-bar-overflow-button {
    list-style-image: url("chrome://global/skin/icons/more.svg") !important;
  }

  #urlbar-background {
    border-color: var(--arrowpanel-field-background) !important;
  }

  html > box:not([id]),
  #navigator-toolbox {
    /* box-shadow: inset 0px 1px black !important; */
  }

  /* tab appear animation */
  .tabbrowser-tab {
    transform-origin: left;
    animation-name: tab-appear;
    animation-duration: .4s;
    animation-timing-function: ease-in;
    animation-fill-mode: forwards;
  }
  @keyframes tab-appear {
    from {
      transform: scaleX(0.8);
      opacity: 0;
    }
  }
/* KEYMASTERR END */

